info/03-freedriving_testdone/RemoteApi/include/DianaAPI.h

typedef enum _Mode {
    T_MODE_INVALID = -1,
    T_MODE_POSITION = 0,
    T_MODE_JOINT_IMPEDANCE,
    T_MODE_CART_IMPEDANCE,
} mode_e;
/*************************************** version 0.5 ***************************************/

DIANA_API int enterForceMode(/*[IN]*/ int intFrameType,
                             /*IN[16]*/ double *dblFrameMatrix,
                             /*IN[3]*/ double *dblForceDirection,
                             /*[IN]*/ double dblForceValue,
                             /*[IN]*/ double dblMaxApproachVelocity,
                             /*[IN]*/ double dblMaxAllowTcpOffset, /*IN*/ const char *strIpAddress = "");
DIANA_API int leaveForceMode(/*IN*/ int intExitMode, /*IN*/ const char *strIpAddress = "");
DIANA_API int setDefaultActiveTcpPose(/*IN[6]*/ double *arrPose, /*IN*/ const char *strIpAddress = "");
DIANA_API int setResultantCollision(/*IN*/ double force,
                                    /*IN*/ const char *strIpAddress = "");  //合力
DIANA_API int setJointImpedance(/*IN[7]*/ double *arrStiff, /*IN[7]*/ double *arrDamp,
                                /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointImpedance(/*OUT[7]*/ double *arrStiff, /*OUT[7]*/ double *arrDamp,
                                /*IN*/ const char *strIpAddress = "");
DIANA_API int setCartImpedance(/*IN[6]*/ double *arrStiff, /*IN[6]*/ double *arrDamp,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int getCartImpedance(/*OUT[6]*/ double *arrStiff, /*OUT[6]*/ double *arrDamp,
                               /*IN*/ const char *strIpAddress = "");
/*************************************** version 2.2 ( version 0.6 ) ***************************************/

DIANA_API int zeroSpaceFreeDriving(/*IN*/ bool enable, /*IN*/ const char *strIpAddress = "");
DIANA_API int createPath(/*IN*/ int type, /*OUT*/ unsigned int &id_path,
                         /*IN*/ const char *strIpAddress = ""); /*1 for moveJ, 2 for moveL*/
DIANA_API int addMoveL(/*IN*/ unsigned int id_path, /*IN[7]*/ double *joints, /*IN*/ double vel, /*IN*/ double acc,
                       /*IN*/ double blendradius, /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveJ(/*IN*/ unsigned int id_path, /*IN[7]*/ double *joints, /*IN*/ double vel_percent,
                       /*IN*/ double acc_percent, /*IN*/ double blendradius_percent,
                       /*IN*/ const char *strIpAddress = "");
DIANA_API int runPath(/*IN*/ unsigned int id_path, /*IN*/ const char *strIpAddress = "");
DIANA_API int destroyPath(/*IN*/ unsigned int id_path, /*IN*/ const char *strIpAddress = "");
/*************************************** version 0.7 ***************************************/

DIANA_API int rpy2Axis(/*IN[3]*/ double *arr);
DIANA_API int axis2RPY(/*IN[3]*/ double *arr);
DIANA_API int homogeneous2Pose(/*IN[16]*/ double *matrix, /*OUT[6]*/ double *pose);
DIANA_API int pose2Homogeneous(/*IN[6]*/ double *pose, /*OUT[16]*/ double *matrix);
DIANA_API int enableTorqueReceiver(/*bool*/ bool bEnable, /*IN*/ const char *strIpAddress = "");
DIANA_API int sendTorque_rt(/*IN[7]*/ double *torque, /*IN*/ double t, /*IN*/ const char *strIpAddress = "");
/*************************************** version 0.8 ***************************************/

DIANA_API int enableCollisionDetection(bool bEnable, /*IN*/ const char *strIpAddress = "");
DIANA_API int setActiveTcpPayload(/*IN[10]*/ double *payload, /*IN*/ const char *strIpAddress = "");
DIANA_API int servoJ(/*IN[7]*/ double *joints, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int servoL(/*IN[6]*/ double *pose, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                     /*IN*/ double scale, /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");